--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,34 @@
 {
-    "name": "websolutespa/magento-transporter-importer",
-    "description": "Websolute Transporter Importer module",
-    "type": "magento2-module",
-    "require": {
-        "magento/framework": "*",
-        "websolutespa/magento-transporter-base": "^1.0"
+  "name": "websolutespa/magento-transporter-importer",
+  "description": "N/A",
+  "type": "magento2-module",
+  "require": {
+    "magento/framework": "*",
+    "websolutespa/magento-transporter-base": "^1.0"
+  },
+  "authors": [
+    {
+      "name": "Danilo Argentiero",
+      "email": "argentiero.danilo@gmail.com",
+      "homepage": "https://www.linkedin.com/in/daniloargentiero/",
+      "role": "Software Architect"
     },
-    "license": "OSL-3.0",
-    "autoload": {
-        "files": [
-            "registration.php"
-        ],
-        "psr-4": {
-            "Websolute\\TransporterImporter\\": ""
-        }
+    {
+      "name": "Riccardo Ugolini",
+      "email": "riccardo.ugolini@gmail.com",
+      "homepage": "https://www.linkedin.com/in/riccardougolini/",
+      "role": "Software Architect"
     }
+  ],
+  "license": [
+    "MIT"
+  ],
+  "autoload": {
+    "files": [
+      "registration.php"
+    ],
+    "psr-4": {
+      "Websolute\\TransporterImporter\\": ""
+    }
+  }
 }
